# monorepo

./: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  bazel-bin  bazel-monorepo  bazel-out  bazel-testlogs  package.json
kubernetes/: BUILD
kubernetes/helm/: BUILD  Chart.yaml  demo-mkt-front-values.yaml  values.yaml
kubernetes/helm/templates/: BUILD  deployment.yaml
python/: BUILD  gazelle_python.yaml  main.py  repo_tags.txt  requirements.in  requirements_lock.txt  runtime.txt
python/common/m_fastAPI/: BUILD.bazel  fastapi_base.py
python/common/observability/: BUILD  BUILD.bazel  langfuse_tracer.py  noop_tracer.py  tracer_interface.py
python/hello_world/: BUILD  main.py
python/langfuse_1/: BUILD  BUILD.bazel  config.py  fastapi_app.py  main.py
python/langfuse_1/core/: BUILD  BUILD.bazel  gemini_service.py  llm_service.py
python/mcp-tracing/: .env.example
python/mcp-tracing/src/: main.py  search_server.py
python/mcp-tracing/src/utils/: otel_utils.py
python/mcp_tracing/: README.md
python/mcp_tracing/src/: BUILD.bazel  config.py  main.py  search_server.py
python/mcp_tracing/src/utils/: BUILD.bazel  otel_utils.py
python/rag/: README.md
python/rag/rag_bot/: BUILD.bazel  __init__.py  answer_evaluation.py  chunk_evaluation.py  main.py
typescript/: BUILD  main.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
typescript/hello_ts/: BUILD  package.json  tsconfig.json
typescript/pwc-fr-iafactory-demo-mkt-bounce/: .env.example  BUILD.bazel  README.md  angular.json  demo.html  nginx.conf  package.json  tsconfig.bazel.json
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/: index.html  server.ts  styles.scss
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.routes.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/app/core/models/: analysis.model.ts  api-response.model.ts  classification.model.ts  contact.model.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/app/core/services/: analysis.service.ts  config.service.ts  icon.service.ts  mock-data.service.ts  theme.service.ts  translation.service.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/app/features/analysis/: analysis.component.html  analysis.component.scss  analysis.component.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/app/features/demo/: demo.component.html  demo.component.scss  demo.component.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/app/layout/footer/: footer.component.html  footer.component.scss  footer.component.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/app/layout/header/: header.component.html  header.component.scss  header.component.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/app/shared/components/ui/badge/: badge.component.html  badge.component.scss  badge.component.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/app/shared/components/ui/button/: button.component.html  button.component.scss  button.component.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/app/shared/components/ui/card/: card.component.html  card.component.scss  card.component.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/app/shared/components/ui/input/: input.component.html  input.component.scss  input.component.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/app/shared/components/ui/loading/: loading.component.html  loading.component.scss  loading.component.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/app/shared/components/ui/stat-card/: stat-card.component.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/app/shared/components/ui/table/: table.component.html  table.component.scss  table.component.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/app/shared/directives/: translate.directive.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/app/shared/pipes/: translate.pipe.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/assets/i18n/: en.json  fr.json
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/environments/: environment.prod.ts  environment.prod.ts.tpl  environment.ts
typescript/pwc-fr-iafactory-demo-mkt-bounce/src/styles/: _components.scss  _layout.scss  _mixins.scss  _themes.scss  _typography.scss  _variables.scss
typescript/user-feedback/: README.md  instrumentation.ts  package.json
typescript/user-feedback/app/: layout.tsx  page.tsx
typescript/user-feedback/app/api/chat/: route.ts
typescript/user-feedback/components/ai-elements/: feedback-buttons.tsx  message.tsx
