module(
    name = "monorepo",
    version = "0.1.0",
)

bazel_dep(name = "aspect_rules_js", version = "2.8.3")

js_ext = use_extension("@aspect_rules_js//js:extensions.bzl", "ext")
js_ext.npm(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(js_ext, "npm")

js_toolchains_ext = use_extension("@aspect_rules_js//js:toolchains.bzl", "toolchains")
js_toolchains_ext.register_default_toolchains()

bazel_dep(name = "aspect_rules_ts", version = "3.8.1")
git_override(
    module_name = "aspect_rules_ts",
    commit = "6e5ab38",
    remote = "https://github.com/aspect-build/rules_ts.git",
)

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(
    ts_integrity = "",
    ts_version = "5.9.3",
)
use_repo(rules_ts_ext, "npm_typescript")

bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "my_python_deps",
    python_version = "3.12",
    requirements_lock = "//python:requirements.txt",
)
use_repo(pip, "my_python_deps")

bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.1.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian_python_base",
    image = "python:3.12-slim-bookworm",
    platforms = ["linux/amd64"],
)
use_repo(oci, "debian_python_base", "debian_python_base_linux_amd64")

bazel_dep(name = "rules_helm", version = "0.20.1")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
git_override(
    module_name = "bazel_skylib",
    commit = "53f6d0d",
    remote = "https://github.com/bazelbuild/bazel-skylib.git",
)
