module(
    name = "monorepo",
    version = "0.1.0",
)

# Python setup
bazel_dep(name = "aspect_rules_py", version = "1.6.6")
bazel_dep(name = "rules_mypy", version = "0.40.0")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.6.3")
bazel_dep(name = "rules_uv", version = "0.88.0")

# keep-sorted end
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)

pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//python:requirements_lock.txt",
)
use_repo(pip, "pip")

# rules_mypy co-initializes with rules_python in order to discover types and
# stubs packages in your requirements lock and create a mapping from normal
# requirements to stub requirements which can be used to add appropriate stub
# dependencies automatically during typechecking.
types = use_extension("@rules_mypy//mypy:types.bzl", "types")
types.requirements(
    name = "pip_types",
    pip_requirements = "@pip//:requirements.bzl",
    requirements_txt = "//python/requirements.txt",
)
use_repo(types, "pip_types")

####################################################

# JavaScript / TypeScript setup
bazel_dep(name = "aspect_rules_js", version = "2.8.3")

js_ext = use_extension("@aspect_rules_js//js:extensions.bzl", "ext")
js_ext.npm(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(js_ext, "npm")

js_toolchains_ext = use_extension("@aspect_rules_js//js:toolchains.bzl", "toolchains")
js_toolchains_ext.register_default_toolchains()

bazel_dep(name = "aspect_rules_ts", version = "3.8.1")
git_override(
    module_name = "aspect_rules_ts",
    commit = "6e5ab38",
    remote = "https://github.com/aspect-build/rules_ts.git",
)

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(
    ts_integrity = "",
    ts_version = "5.9.3",
)
use_repo(rules_ts_ext, "npm_typescript")

bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.1.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian_python_base",
    image = "python:3.12-slim-bookworm",
    platforms = ["linux/amd64"],
)
use_repo(oci, "debian_python_base", "debian_python_base_linux_amd64")

bazel_dep(name = "rules_helm", version = "0.20.1")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
git_override(
    module_name = "bazel_skylib",
    commit = "53f6d0d",
    remote = "https://github.com/bazelbuild/bazel-skylib.git",
)
