module(
    name = "monorepo",
    version = "0.1.0",
)

# Python setup
bazel_dep(name = "aspect_rules_py", version = "1.6.6")
bazel_dep(name = "rules_mypy", version = "0.40.0")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.6.3")
bazel_dep(name = "rules_uv", version = "0.88.0")

# keep-sorted end
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)

pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//python:requirements_lock.txt",
)
use_repo(pip, "pip")

# rules_mypy co-initializes with rules_python in order to discover types and
# stubs packages in your requirements lock and create a mapping from normal
# requirements to stub requirements which can be used to add appropriate stub
# dependencies automatically during typechecking.
types = use_extension("@rules_mypy//mypy:types.bzl", "types")
types.requirements(
    name = "pip_types",
    pip_requirements = "@pip//:requirements.bzl",
    requirements_txt = "//python/requirements.txt",
)
use_repo(types, "pip_types")

####################################################

# JavaScript / TypeScript setup

bazel_dep(name = "aspect_bazel_lib", version = "2.22.0")
bazel_dep(name = "aspect_rules_lint", version = "1.13.0")
bazel_dep(name = "aspect_rules_jest", version = "0.24.3")
bazel_dep(name = "aspect_rules_js", version = "2.8.3")
bazel_dep(name = "aspect_rules_swc", version = "2.6.0")
bazel_dep(name = "aspect_rules_ts", version = "3.8.1")
bazel_dep(name = "aspect_rules_rollup", version = "2.0.1")
bazel_dep(name = "aspect_rules_webpack", version = "0.17.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_nodejs", version = "6.6.2")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "24.11.0")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    data = ["//typescript:pnpm-workspace.yaml"],
    npmrc = "//typescript:.npmrc",
    pnpm_lock = "//typescript:pnpm-lock.yaml",
    # public_hoist_packages = {
    #     "@next/eslint-plugin-next": ["next.js"],
    #     "eslint-config-react-app": ["react"],
    #     "eslint@8.28.0": ["react"],
    # },
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

####################################################

bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.1.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian_python_base",
    image = "python:3.12-slim-bookworm",
    platforms = ["linux/amd64"],
)
use_repo(oci, "debian_python_base", "debian_python_base_linux_amd64")

bazel_dep(name = "rules_helm", version = "0.20.1")
bazel_dep(name = "gazelle", version = "0.47.0")
