load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@tar.bzl", "tar")

py_binary(
    name = "main",
    srcs = ["main.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":langfuse_1",
        "//python/common/observability",
        "//python/langfuse_1/core",
    ],
)

py_library(
    name = "langfuse_1",
    srcs = [
        "config.py",
        "fastapi_app.py",
        "main.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//python/common/m_fastAPI",
        "//python/common/observability",
        "//python/langfuse_1/core",
        "@pip//fastapi",
        "@pip//langfuse",
        "@pip//pydantic",
        "@pip//pydantic_settings",
        "@pip//uvicorn",
    ],
)

py_binary(
    name = "fastapi_app",
    srcs = ["fastapi_app.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":langfuse_1",
        "//python/common/m_fastAPI",
        "//python/common/observability",
        "//python/langfuse_1/core",
        "@pip//fastapi",
        "@pip//langfuse",
        "@pip//pydantic",
        "@pip//uvicorn",
    ],
)

tar(
    name = "fastapi_app_tar",
    srcs = [":fastapi_app"],
    tags = ["manual"],
)

oci_image(
    name = "image",
    base = "@debian_python_base",
    entrypoint = ["/python/langfuse_1/fastapi_app"],
    tags = ["manual"],
    tars = [":fastapi_app_tar"],
)

oci_load(
    name = "image_load",
    image = ":image",
    repo_tags = ["langfuse_1:latest"],
)
