load("@npm//typescript/pwc-fr-iafactory-demo-mkt-bounce:@angular/cli/package_json.bzl", angular_cli = "bin")
load("@aspect_rules_js//js:defs.bzl", "js_run_binary", "js_run_devserver")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

# Environment variables for build-time substitution
# These can be overridden with --define:
#   bazel build //...:build --define=BACKEND_URL=https://example.com
BACKEND_URL = select({
    "//conditions:default": "https://projecthub-qa.fr.pwcglb.com/demo-mkt-bounce-backend-service",
})

BASE_HREF = select({
    "//conditions:default": "/",
})

# Generate environment.prod.ts from template with substituted values
expand_template(
    name = "environment_prod",
    out = "src/environments/environment.prod.ts",
    substitutions = {
        "${BACKEND_URL}": "https://projecthub-qa.fr.pwcglb.com/demo-mkt-bounce-backend-service",
        "${BASE_HREF}": "/",
    },
    template = "src/environments/environment.prod.ts.tpl",
)

# Link all npm packages from the pnpm-lock.yaml
npm_link_all_packages(name = "node_modules")

# Export configuration files needed by Angular CLI
exports_files([
    "angular.json",
    "package.json",
    "tsconfig.json",
    "tsconfig.app.json",
    "tsconfig.spec.json",
    "tsconfig.bazel.json",
])

# All source files for the Angular application (excluding test files and template files)
APP_SRCS = glob(
    [
        "src/**/*.ts",
        "src/**/*.html",
        "src/**/*.scss",
        "src/**/*.json",
        "public/**/*",
    ],
    exclude = [
        "src/**/*.spec.ts",
        "src/**/*.tpl",
        "src/environments/environment.prod.ts",  # Generated by expand_template
    ],
    allow_empty = True,
)

# All source files including tests
ALL_SRCS = glob(
    [
        "src/**/*.ts",
        "src/**/*.html",
        "src/**/*.scss",
        "src/**/*.json",
        "public/**/*",
    ],
    allow_empty = True,
)

# Copy all sources to bin for Angular builds
copy_to_bin(
    name = "srcs",
    srcs = APP_SRCS + [
        ":environment_prod",  # Generated environment file
        "angular.json",
        "package.json",
        "tsconfig.json",
        "tsconfig.app.json",
        "tsconfig.bazel.json",
    ],
)

# Angular CLI binary
angular_cli.ng_binary(
    name = "ng",
    visibility = ["//visibility:private"],
)

# Angular CLI build target using ng build directly
# This builds the application in production mode (browser-only for Bazel)
# Use: bazel build //typescript/pwc-fr-iafactory-demo-mkt-bounce:build
js_run_binary(
    name = "build",
    srcs = [
        ":srcs",
        ":node_modules",
        "//typescript:node_modules",
    ],
    args = [
        "run",
        "email-bounce-frontend:build-bazel",
    ],
    chdir = package_name(),
    out_dirs = ["dist/email-bounce-frontend"],
    tool = ":ng",
    execution_requirements = {
        "no-sandbox": "1",
        "no-remote-exec": "1",
    },
    env = {
        "NODE_PATH": "../node_modules",
    },
)

# Development build target
# Use: bazel build //typescript/pwc-fr-iafactory-demo-mkt-bounce:build_dev
js_run_binary(
    name = "build_dev",
    srcs = [
        ":srcs",
        ":node_modules",
        "//typescript:node_modules",
    ],
    args = [
        "run",
        "email-bounce-frontend:build-bazel:development",
    ],
    chdir = package_name(),
    out_dirs = ["dist/email-bounce-frontend"],
    tool = ":ng",
    execution_requirements = {
        "no-sandbox": "1",
        "no-remote-exec": "1",
    },
    env = {
        "NODE_PATH": "../node_modules",
    },
)

# Development server target - runs `ng serve` equivalent
# Use: bazel run //typescript/pwc-fr-iafactory-demo-mkt-bounce:serve
js_run_devserver(
    name = "serve",
    args = [
        "serve",
        "--configuration=development",
        "--host=0.0.0.0",
        "--port=4200",
    ],
    chdir = package_name(),
    tool = ":ng",
    data = APP_SRCS + [
        "angular.json",
        "package.json",
        "tsconfig.json",
        "tsconfig.app.json",
        ":node_modules",
        "//typescript:node_modules",
    ],
)

# Production server simulation (SSR)
# Use: bazel run //typescript/pwc-fr-iafactory-demo-mkt-bounce:serve_ssr
js_run_devserver(
    name = "serve_ssr",
    args = [
        "serve",
        "--configuration=production",
        "--host=0.0.0.0",
        "--port=4200",
    ],
    chdir = package_name(),
    tool = ":ng",
    data = APP_SRCS + [
        ":environment_prod",  # Generated environment file
        "angular.json",
        "package.json",
        "tsconfig.json",
        "tsconfig.app.json",
        ":node_modules",
        "//typescript:node_modules",
    ],
)

# Test target using karma
# Use: bazel run //typescript/pwc-fr-iafactory-demo-mkt-bounce:test
js_run_binary(
    name = "test",
    srcs = ALL_SRCS + [
        "angular.json",
        "package.json",
        "tsconfig.json",
        "tsconfig.spec.json",
        ":node_modules",
    ],
    args = [
        "test",
        "--no-watch",
        "--browsers=ChromeHeadless",
    ],
    chdir = package_name(),
    tool = ":ng",
)
