load("@npm//typescript/pwc-fr-iafactory-demo-mkt-bounce:@angular/cli/package_json.bzl", angular_cli = "bin")
load("@aspect_rules_js//js:defs.bzl", "js_run_binary", "js_run_devserver")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@tar.bzl", "mutate", "tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")

package(default_visibility = ["//visibility:public"])

# Environment variables for build-time substitution
# These can be overridden with --define:
#   bazel build //...:build --define=BACKEND_URL=https://example.com
BACKEND_URL = select({
    "//conditions:default": "https://projecthub-qa.fr.pwcglb.com/demo-mkt-bounce-backend-service",
})

BASE_HREF = select({
    "//conditions:default": "/mkt-bounce",
})

# Generate environment.prod.ts from template with substituted values
expand_template(
    name = "environment_prod",
    out = "src/environments/environment.prod.ts",
    substitutions = {
        "${BACKEND_URL}": "https://projecthub-qa.fr.pwcglb.com/demo-mkt-bounce-backend-service",
        "${BASE_HREF}": "/mkt-bounce-front-service/",
    },
    template = "src/environments/environment.prod.ts.tpl",
)

# Link all npm packages from the pnpm-lock.yaml
npm_link_all_packages(name = "node_modules")

# Export configuration files needed by Angular CLI
exports_files([
    "angular.json",
    "package.json",
    "tsconfig.json",
    "tsconfig.app.json",
    "tsconfig.spec.json",
    "tsconfig.bazel.json",
])

# All source files for the Angular application (excluding test files and template files)
APP_SRCS = glob(
    [
        "src/**/*.ts",
        "src/**/*.html",
        "src/**/*.scss",
        "src/**/*.json",
        "public/**/*",
    ],
    exclude = [
        "src/**/*.spec.ts",
        "src/**/*.tpl",
        "src/environments/environment.prod.ts",  # Generated by expand_template
    ],
    allow_empty = True,
)

# All source files including tests
ALL_SRCS = glob(
    [
        "src/**/*.ts",
        "src/**/*.html",
        "src/**/*.scss",
        "src/**/*.json",
        "public/**/*",
    ],
    allow_empty = True,
)

# Copy all sources to bin for Angular builds
copy_to_bin(
    name = "srcs",
    srcs = APP_SRCS + [
        ":environment_prod",  # Generated environment file
        "angular.json",
        "package.json",
        "tsconfig.json",
        "tsconfig.app.json",
        "tsconfig.bazel.json",
    ],
)

# Angular CLI binary
angular_cli.ng_binary(
    name = "ng",
    visibility = ["//visibility:private"],
)

# Angular CLI build target using ng build directly
# This builds the application in production mode (browser-only for Bazel)
# Use: bazel build //typescript/pwc-fr-iafactory-demo-mkt-bounce:build
js_run_binary(
    name = "build",
    srcs = [
        ":srcs",
        ":node_modules",
        "//typescript:node_modules",
    ],
    args = [
        "run",
        "email-bounce-frontend:build-bazel",
    ],
    chdir = package_name(),
    out_dirs = ["dist/email-bounce-frontend"],
    tool = ":ng",
    execution_requirements = {
        "no-sandbox": "1",
        "no-remote-exec": "1",
    },
    env = {
        "NODE_PATH": "../node_modules",
    },
)

# Development build target
# Use: bazel build //typescript/pwc-fr-iafactory-demo-mkt-bounce:build_dev
js_run_binary(
    name = "build_dev",
    srcs = [
        ":srcs",
        ":node_modules",
        "//typescript:node_modules",
    ],
    args = [
        "run",
        "email-bounce-frontend:build-bazel:development",
    ],
    chdir = package_name(),
    out_dirs = ["dist/email-bounce-frontend"],
    tool = ":ng",
    execution_requirements = {
        "no-sandbox": "1",
        "no-remote-exec": "1",
    },
    env = {
        "NODE_PATH": "../node_modules",
    },
)

# Development server target - runs `ng serve` equivalent
# Use: bazel run //typescript/pwc-fr-iafactory-demo-mkt-bounce:serve
js_run_devserver(
    name = "serve",
    args = [
        "serve",
        "--configuration=development",
        "--host=0.0.0.0",
        "--port=4200",
    ],
    chdir = package_name(),
    tool = ":ng",
    data = APP_SRCS + [
        "angular.json",
        "package.json",
        "tsconfig.json",
        "tsconfig.app.json",
        ":node_modules",
        "//typescript:node_modules",
    ],
)

# Production server simulation (SSR)
# Use: bazel run //typescript/pwc-fr-iafactory-demo-mkt-bounce:serve_ssr
js_run_devserver(
    name = "serve_ssr",
    args = [
        "serve",
        "--configuration=production",
        "--host=0.0.0.0",
        "--port=4200",
    ],
    chdir = package_name(),
    tool = ":ng",
    data = APP_SRCS + [
        ":environment_prod",  # Generated environment file
        "angular.json",
        "package.json",
        "tsconfig.json",
        "tsconfig.app.json",
        ":node_modules",
        "//typescript:node_modules",
    ],
)

# Test target using karma
# Use: bazel run //typescript/pwc-fr-iafactory-demo-mkt-bounce:test
js_run_binary(
    name = "test",
    srcs = ALL_SRCS + [
        "angular.json",
        "package.json",
        "tsconfig.json",
        "tsconfig.spec.json",
        ":node_modules",
    ],
    args = [
        "test",
        "--no-watch",
        "--browsers=ChromeHeadless",
    ],
    chdir = package_name(),
    tool = ":ng",
)

####################################################
# SSR Production Build & OCI Container
####################################################

# SSR production build target
# Use: bazel build //typescript/pwc-fr-iafactory-demo-mkt-bounce:build_ssr
js_run_binary(
    name = "build_ssr",
    srcs = [
        ":srcs",
        ":node_modules",
        "//typescript:node_modules",
    ],
    args = [
        "run",
        "email-bounce-frontend:build-bazel-ssr",
    ],
    chdir = package_name(),
    out_dirs = ["dist/email-bounce-frontend"],
    tool = ":ng",
    execution_requirements = {
        "no-sandbox": "1",
        "no-remote-exec": "1",
    },
    env = {
        "NODE_PATH": "../node_modules",
    },
)

# Create tar archive of SSR dist for OCI image
# The tar contains the Angular SSR server and browser bundles
tar(
    name = "ssr_layer",
    srcs = [":build_ssr"],
    # Strip the bazel output prefix and place at /app in container
    mutate = mutate(
        strip_prefix = "typescript/pwc-fr-iafactory-demo-mkt-bounce",
    ),
)

# OCI image for Angular SSR server
# Base: Distroless Node.js 22 image (minimal, secure)
oci_image(
    name = "image",
    base = "@distroless_nodejs_linux_amd64",
    tars = [":ssr_layer"],
    # Distroless nodejs images run node automatically on /nodejs/bin/node
    # Working directory must be the server folder for Angular to find its manifest files
    entrypoint = ["/nodejs/bin/node"],
    cmd = ["server.mjs"],
    workdir = "/dist/email-bounce-frontend/server",
    env = {
        "NODE_ENV": "production",
        "PORT": "4000",
    },
    exposed_ports = ["4200/tcp"],
)

# Load OCI image into local Docker daemon for testing
# Use: bazel run //typescript/pwc-fr-iafactory-demo-mkt-bounce:image_load
# Or build tarball: bazel build //typescript/pwc-fr-iafactory-demo-mkt-bounce:image_load --output_groups=tarball
# Then: docker load < bazel-bin/typescript/pwc-fr-iafactory-demo-mkt-bounce/image_load/tarball.tar
oci_load(
    name = "image_load",
    image = ":image",
    repo_tags = ["pwc-mkt-bounce:latest"],
)

# Push OCI image to container registry
# Use: bazel run //typescript/pwc-fr-iafactory-demo-mkt-bounce:push_image
oci_push(
    name = "push_image",
    image = ":image",
    # Default repository - override with --define or build settings
    repository = "gcr.io/projecthub-qa/pwc-mkt-bounce",
)
