load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "main",
    srcs = ["main.py"],
    data = [":search_server"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//langfuse",
        "@pip//openai_agents",
        "@pip//openinference_instrumentation_google_genai",
    ],
)

py_binary(
    name = "search_server",
    srcs = ["search_server.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//exa_py",
        "@pip//fastmcp",
        "@pip//langfuse",
    ],
)

py_library(
    name = "config",
    srcs = ["config.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//pydantic",
        "@pip//pydantic_settings",
    ],
)

py_library(
    name = "src",
    srcs = [
        "config.py",
        "main.py",
        "search_server.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//exa_py",
        "@pip//fastmcp",
        "@pip//langfuse",
        "@pip//openai_agents",
        "@pip//openinference_instrumentation_google_genai",
        "@pip//pydantic",
        "@pip//pydantic_settings",
    ],
)
