load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "answer_evaluation",
    srcs = ["answer_evaluation.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":rag_bot",
        "@pip//beautifulsoup4",
        "@pip//langchain_google_genai",
        "@pip//langfuse",
        "@pip//python_dotenv",
    ],
)

py_binary(
    name = "main",
    srcs = ["main.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//beautifulsoup4",
        "@pip//langchain",
        "@pip//langchain_community",
        "@pip//langchain_core",
        "@pip//langchain_google_genai",
        "@pip//langchain_text_splitters",
        "@pip//langfuse",
        "@pip//python_dotenv",
        "@pip//tiktoken",
    ],
)

py_library(
    name = "rag_bot",
    srcs = [
        "__init__.py",
        "answer_evaluation.py",
        "chunk_evaluation.py",
        "main.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//langchain",
        "@pip//langchain_community",
        "@pip//langchain_core",
        "@pip//langchain_google_genai",
        "@pip//langchain_text_splitters",
        "@pip//langfuse",
        "@pip//python_dotenv",
        "@pip//tiktoken",
    ],
)
